--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@badeball/cypress-cucumber-preprocessor": "^23.2.1",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.7",
     "cypress": "^15.7.0",
+    "cypress-xpath": "^2.0.1",
     "ts-loader": "^9.5.4"
   },
   "cypress-cucumber-preprocessor": {
